version 1.0.5 (git tag v1.0.5rel)
---------------------------------
* fix error in contour method that caused a bogus mask to be applied
  to the data (issue 58).
* fix further corner cases with splitting of parallels that cross
  the dateline (issue 40).
* add latlon keyword to plotting methods.  If latlon=True, x and y
  values are assumed to longitudes and latitudes in degrees.  The
  data and longitudes are shifted to the map projection region (for
  cylindrical and pseudo-cylindrical projections) using the shiftdata
  method, and lons/lats are converted to map projection coords. Default
  value is False. Addresses issue 54.  New example shiftdata.py added
  to illustrate usage.
* fix bluemarble and warpimage methods to account for change in orientation
  of arrays returned to matplotlib's pil_to_array (issue 51)
* fix glitch with drawing meridians and filling coastline polygons with 
  omerc projection that includes pole.

version 1.0.4 (git tag v1.0.4rel)
--------------------------------
* fix bug that caused Europe coastlines to disappear from some maps
  (evident from nytolondon.py example).
* fix splitting of parallels in conic projections that cross the dateline
  (issue 40).

version 1.0.3 (git tag v1.0.3rel)
------------------------------
* fix some more python 3 compatibility issues (all examples now
  work with python 3.2).
* added alpha keyword to fillcontinents (to set transparency).
* update geos from 3.3.1 to 3.3.3.
* upgrade proj4 source to version 4.8.0, pyproj to version 1.9.2.
* add k_0 keyword for projection = 'tmerc' so UTM zones can be
  created. Also can be used with 'lcc','omerc' and 'stere'.
  Added "utmtest.py" example.
* add streamplot method, along with streamplot_demo.py example.
* add boundarylats, boundarylons Basemap attributes (arrays
  describing map boundaries - useful for illustrating map projection
  region on another map). Example illustrating usage
  (make_inset.py) added.